syntax = "proto3";

package pb;

// The mallhome service definition.
service GetMallHome {
  rpc GetMallHome (MallHomeReq) returns (MallHome) {}
}

message MallHomeReq {
   string user_id = 1;
}

message MallHome {
   UserInfo userInfo = 1;
   HotGoods hotGoods = 2;
}

message HotGoods {
    string goods_id = 1;
    string goods_name = 2;
    string describe = 3;
    string price = 4;
    string factory = 5;
}

message UserInfo{
    string user_ids = 1;
    string user_name = 2;
    string user_tag = 3;
    string sex = 4;
    string phone = 5;
    string email = 6;
}

